Fix deprecation warnings (replace 'Ebean' with 'DB'; use proper builder for configuration of Flyway migration engine).